--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "Alexander Repeta <alexander.repeta@gmail.com>",
   "license": "ISC",
   "dependencies": {
+    "ckey": "^1.0.3",
     "dotenv": "^16.1.4",
     "ethers": "^5.7.2",
     "modern-normalize": "^1.1.0",
